--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="https://i.postimg.cc/dV1VC986/0d766eb7-b85d-42ea-ab78-78758868d0f9.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> Integracja sensoryczna jest procesem neuronalnym zachodzącym w układzie nerwowym każdego człowieka. Polega na gromadzeniu informacji zmysłowych i ich integracji w celu prawidłowego funkcjonowania. Zmysły dostarczają informacji o stanie fizycznym naszego ciała i otoczenia. <br>To nie tylko pięć najbardziej znanych zmysłów (wzrok, dotyk, słuch, smak i węch) ale także zmysł propriocepcji (czyli czucia głębokiego, zmysł informujący mózg o położeniu ciała i jego ruchach) oraz układ przedsionkowy (istota równowagi).  <br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz terminy</a>
+                                    <p class="mb-4"> Integracja sensoryczna jest procesem neuronalnym zachodzącym w układzie nerwowym każdego człowieka. Polega na gromadzeniu informacji zmysłowych i ich integracji w celu prawidłowego funkcjonowania. Zmysły dostarczają informacji o stanie fizycznym naszego ciała i otoczenia. <br>To nie tylko pięć najbardziej znanych zmysłów (wzrok, dotyk, słuch, smak i węch) ale także zmysł propriocepcji (czyli czucia głębokiego, zmysł informujący mózg o położeniu ciała i jego ruchach) oraz układ przedsionkowy (istota równowagi).  <br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz dostępne terminy</a>
 </p>
 
                                 </div>
@@ -250,7 +250,7 @@
                                     • Diagnoza pisemna (dokument) – 50 zł płatność przy diagnozie. <br><br>
                                     • Terapia Integracji Sensorycznej 120zł/ 50 minut <br><br>
                                     • Gimnastyka korekcyjna 100zł/ 50 minut <br> <br>
- <br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz terminy</a>
+ <br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz dostępne terminy</a>
 </p>
 
                                 </div>
@@ -280,7 +280,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="https://i.postimg.cc/rm9BgBTr/09bb4c47-dd7e-496c-9858-d062b32c1c3e.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">  Procesy integracji sensorycznej o prawidłowym przebiegu są podstawą umiejętności motorycznych, czytania, pisania i mowy. <br> U wielu dzieci, zarówno tych w normie intelektualnej, jak i dzieci z nieprawidłowym rozwojem, można zaobserwować deficyty integracji sensorycznej, które ujawniają się w polu motorycznym (np. niezdarność, problemy z koordynacją ruchu, trudności w utrzymaniu równowagi czy czynnościach samoobsługowych), jak i dotykowym (np. nietolerancja dotyku niektórych faktur, innych osób, pokarmów, niechęć do manipulowania przedmiotami lub w polu słuchowym(nietolerancja dźwięków, nadwrażliwość słuchowa, opóźniony rozwój mowy). <br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz terminy</a>
+                                    <p class="mb-4">  Procesy integracji sensorycznej o prawidłowym przebiegu są podstawą umiejętności motorycznych, czytania, pisania i mowy. <br> U wielu dzieci, zarówno tych w normie intelektualnej, jak i dzieci z nieprawidłowym rozwojem, można zaobserwować deficyty integracji sensorycznej, które ujawniają się w polu motorycznym (np. niezdarność, problemy z koordynacją ruchu, trudności w utrzymaniu równowagi czy czynnościach samoobsługowych), jak i dotykowym (np. nietolerancja dotyku niektórych faktur, innych osób, pokarmów, niechęć do manipulowania przedmiotami lub w polu słuchowym(nietolerancja dźwięków, nadwrażliwość słuchowa, opóźniony rozwój mowy). <br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz dostępne terminy</a>
 </p>
                                 </div>
                             </div>
@@ -309,7 +309,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="https://i.postimg.cc/Kc0XThJX/beae44f3-867d-4631-95fb-04cf86e2f0c0.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Rozpoczęcie terapii integracji sensorycznej poprzedzone jest wnikliwą diagnozą dziecka w oparciu o standaryzowane techniki. Na podstawie przeprowadzonych badań z wykorzystaniem testów  i obserwacji klinicznych opracowywane są indywidualne plany terapii. Rodzice otrzymują także wskazówki terapeutyczne, które powinni wdrożyć w domu. <br> Zajęcia prowadzone tą metodą mają formę zabawy (metoda ta nazywana jest metodą zabawy naukowej), podczas której dziecko uczy się poprzez zabawę (ćwiczenia) z wykorzystaniem specjalistycznego sprzętu. Jest to jednak czas dobrze zaplanowany, nastawiony na dostarczanie bodźców w określony sposób. <br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz termin</a></p>
+                                    <p class="mb-4">Rozpoczęcie terapii integracji sensorycznej poprzedzone jest wnikliwą diagnozą dziecka w oparciu o standaryzowane techniki. Na podstawie przeprowadzonych badań z wykorzystaniem testów  i obserwacji klinicznych opracowywane są indywidualne plany terapii. Rodzice otrzymują także wskazówki terapeutyczne, które powinni wdrożyć w domu. <br> Zajęcia prowadzone tą metodą mają formę zabawy (metoda ta nazywana jest metodą zabawy naukowej), podczas której dziecko uczy się poprzez zabawę (ćwiczenia) z wykorzystaniem specjalistycznego sprzętu. Jest to jednak czas dobrze zaplanowany, nastawiony na dostarczanie bodźców w określony sposób. <br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz dostępne terminy</a></p>
 
                                 </div>
                             </div>
@@ -339,7 +339,7 @@
                                     <img class="img-fluid rounded mb-5" src="https://i.postimg.cc/dVdS4bmV/aace9e0b-4cb1-4981-b11a-b40df9ab667a.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Jeżeli twoje dziecko ma stwierdzoną wadę postawy i zalecany jest udział w zajęciach gimnastyki korekcyjnej to dobrze trafiłeś.
-                                    Gimnastyka korekcyjna dla dzieci to ćwiczenia, których celem jest skorygowanie istniejących zaburzeń statyki ciała i doprowadzenie jej w miarę możliwości do stanu prawidłowego. <br> Ponadto korektywa dla dzieci pośrednio zwiększa ich sprawność fizyczną oraz wydolność całego organizmu. Właściwie prowadzona terapia, w zależności od wady postawy i jej nasilenia, może całkowicie ją zlikwidować lub znacząco zmniejszyć. Ponadto dobrze prowadzone zajęcia mogą być formą dodatkowej aktywności, która pozwoli na utrzymanie prawidłowej masy ciała, a dziecko będzie sprawniejsze. <br> <br><br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz termin</a></p>
+                                    Gimnastyka korekcyjna dla dzieci to ćwiczenia, których celem jest skorygowanie istniejących zaburzeń statyki ciała i doprowadzenie jej w miarę możliwości do stanu prawidłowego. <br> Ponadto korektywa dla dzieci pośrednio zwiększa ich sprawność fizyczną oraz wydolność całego organizmu. Właściwie prowadzona terapia, w zależności od wady postawy i jej nasilenia, może całkowicie ją zlikwidować lub znacząco zmniejszyć. Ponadto dobrze prowadzone zajęcia mogą być formą dodatkowej aktywności, która pozwoli na utrzymanie prawidłowej masy ciała, a dziecko będzie sprawniejsze. <br> <br><br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz dostępne terminy</a></p>
 
                                 </div>
                             </div>
@@ -376,7 +376,7 @@
                                     • klatka piersiowa "kurza" lub "szewska" <br>
                                     • otyłość i związane z tym problemy <br>
                                     W naszym gabinecie prowadzimy zajęcia gimnastyki korekcyjnej indywidualne oraz w małych grupach 2-3 osobowych. <br> <br>
-<a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz termin</a></p>
+<a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz dostępne terminy</a></p>
 
                                 </div>
                             </div>
