Add contact info

--- a/index.html
+++ b/index.html
@@ -167,11 +167,13 @@
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Lokalizacja</h4>
+                        <h4 class="text-uppercase mb-4">Lokalizacja i kontakt</h4>
                         <p class="lead mb-0">
                             40-282 Katowice,
                             <br />
                             ul. Sikorskiego 30/35
+                            <br />
+                            Tel. 577 205 860
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
