--- a/index.html
+++ b/index.html
@@ -248,10 +248,11 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="https://i.postimg.cc/d3bKp87M/temp-Image-V2-Ew-Cx.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">  • Diagnoza terapii integracji sensorycznej- 3 spotkania/ 350 zł <br><br>
+                                    <p class="mb-4">
+• Diagnoza terapii integracji sensorycznej – 3 spotkania/ 350 zł <br><br>
                                     • Diagnoza pisemna (dokument) – 50 zł płatność przy diagnozie. <br><br>
-                                    • Terapia Integracji Sensorycznej 120zł/ 50 minut <br><br>
-                                    • Gimnastyka korekcyjna 100zł/ 50 minut <br> <br>
+                                    • Terapia Integracji Sensorycznej – 120zł/ 50 minut <br><br>
+                                    • Gimnastyka korekcyjna – 100zł/ 50 minut <br> <br>
  <br> <br> <a href="https://calendar.online/e27790e134408016b058" class="btn btn-primary stretched-link">Zobacz dostępne terminy</a>
 </p>
 
