--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>HAPPY KIDS - Prywatny Gabinet Terapeutyczny dla dzieci</title>
+        <title>Integracja Sensoryczna - Prywatny Gabinet Terapeutyczny „HAPPY KIDS”</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -152,10 +152,12 @@
                 <div class="row">
                     <div class="col-lg-4 ms-auto"><p class="lead">mgr Małgorzata Kleser - wieloletni, certyfikowany terapeuta i diagnosta integracji sensorycznej.<br> <br>
                         Absolwentka Wyższej Szkoły Pedagogicznej w Warszawie na kierunku pedagogika. <br> <br>
-                        Ukończone studia podyplomowe na kierunkach: Terapia i rewalidacja osób ze specjalnymi potrzebami edukacyjnymi, Oligofrenopedagogika, Edukacja wczesnoszkolna i przedszkolna, Matematyka, III stopniowy kurs terapii behawioralnej oraz kursy Integracji Odruchów Dynamicznych i Posturalnych dr. Swietłany Masgutowej, Terapii Taktylnej, Ruch Rozwijający Weroniki Sherborn, II stopniowa Terapia EEG Biofeedback, Terapia metody Warnkego, Komunikacja alternatywna Makaton, Terapia Ręki.
+                        Ukończone studia podyplomowe na kierunkach: <br>Terapia i rewalidacja osób ze specjalnymi potrzebami edukacyjnymi, Oligofrenopedagogika, Edukacja wczesnoszkolna i przedszkolna, Matematyka, III stopniowy kurs terapii behawioralnej oraz kursy Integracji Odruchów Dynamicznych i Posturalnych dr. Swietłany Masgutowej, Terapii Taktylnej, Ruch Rozwijający Weroniki Sherborn, II stopniowa Terapia EEG Biofeedback, Terapia metody Warnkego, Komunikacja alternatywna Makaton, Terapia Ręki.
 
 </p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">mgr Krzysztof Kleser- absolwent Akademii Wychowania Fizycznego na kierunku wychowanie fizyczne. <br> <br> Ukończone studia podyplomowe z gimnastyki korekcyjnej, oligofrenopedagogiki, resocjalizacji i socjoterapii oraz kurs I stopnia EEG Biofeedback. EEG Biofeedback. <br> </p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">mgr Krzysztof Kleser- absolwent Akademii Wychowania Fizycznego na kierunku wychowanie fizyczne. <br> <br>ukończone studia podyplomowe na kierunkach: <br>Gimnastyka Korekcyjna, Oligofrenopedagogika, Resocjalizacja i Socjoterapia.<br>
+                        Kurs I Stopnia EEG Biofeedback.
+ <br> </p></div>
                 </div>
 
             </div>
