--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         Ukończone studia podyplomowe na kierunkach: <br>Terapia i rewalidacja osób ze specjalnymi potrzebami edukacyjnymi, Oligofrenopedagogika, Edukacja wczesnoszkolna i przedszkolna, Matematyka, III stopniowy kurs terapii behawioralnej oraz kursy Integracji Odruchów Dynamicznych i Posturalnych dr. Swietłany Masgutowej, Terapii Taktylnej, Ruch Rozwijający Weroniki Sherborn, II stopniowa Terapia EEG Biofeedback, Terapia metody Warnkego, Komunikacja alternatywna Makaton, Terapia Ręki.
 
 </p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">mgr Krzysztof Kleser- absolwent Akademii Wychowania Fizycznego na kierunku wychowanie fizyczne. <br> <br>ukończone studia podyplomowe na kierunkach: <br>Gimnastyka Korekcyjna, Oligofrenopedagogika, Resocjalizacja i Socjoterapia.<br>
+                    <div class="col-lg-4 me-auto"><p class="lead">mgr Krzysztof Kleser- absolwent Akademii Wychowania Fizycznego na kierunku wychowanie fizyczne. <br> <br>Ukończone studia podyplomowe na kierunkach: <br>Gimnastyka Korekcyjna, Oligofrenopedagogika, Resocjalizacja i Socjoterapia.<br>
                         Kurs I Stopnia EEG Biofeedback.
  <br> </p></div>
                 </div>
