--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!-- About Section Button-->
 
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light" href="577205860">
+                <button class="btn btn-xl btn-outline-light" onclick="callPhoneNumber('+577205860')">Call Now</button>
                     <i class="fa-regular fa-calendar-plus"></i>
                     Umów się dziś!
                 </a>
