--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!-- About Section Button-->
 
             <div class="text-center mt-4">
-                <button class="btn btn-xl btn-outline-light" onclick="callPhoneNumber('+577205860')">Call Now</button>
+                <a class="btn btn-outline-light btn-social mx-1" href="tel:577205860"><i class="fa-regular fa-calendar-plus"></i></a>
                     <i class="fa-regular fa-calendar-plus"></i>
                     Umów się dziś!
                 </a>
