--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Prywatny Gabinet Terapeutyczny dla dzieci</p>
+                <p class="masthead-subheading font-weight-light mb-0">Prywatny Gabinet Terapeutyczny dla eci</p>
             </div>
             <!-- About Section Button-->
 
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light" href="tel:577205860"><a class="btn btn-outline-light btn-social mx-1" href="tel:577205860"><i class="fa-regular fa-calendar-plus"></i></a>
+                <a class="btn btn-xl btn-outline-light" href="tel:577205860">
                     <i class="fa-regular fa-calendar-plus"></i>
                     Umów się dziś!
                 </a>
