--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="text-center mt-4">
                 <a class="btn btn-xl btn-outline-light" href="tel:577205860">
-                    <i class="fa-regular fa-phone-alt"></i>
+                    <i class="fa-regular fa-phone"></i>
                     Umów się dziś!
                 </a>
             </div>
@@ -181,7 +181,7 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Znajdź wolny termin</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="tel:577205860"><i class="fa-regular fa-phone-alt"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="tel:577205860"><i class="fa-regular fa-phone"></i></a>
                         <p class="lead mb-0">
                             Umów się dziś!
                     </div>
