--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">mgr Małgorzata Kleser - wieloletni, certyfikowany terapeuta i diagnosta integracji sensorycznej.<br> <br>
+                    <div class="col-lg-4 ms-auto"><p class="lead">• mgr Małgorzata Kleser - wieloletni, certyfikowany terapeuta i diagnosta integracji sensorycznej.<br> <br>
                         Absolwentka Wyższej Szkoły Pedagogicznej w Warszawie na kierunku pedagogika. <br> <br>
                         Ukończone studia podyplomowe na kierunkach: <br>Terapia i rewalidacja osób ze specjalnymi potrzebami edukacyjnymi, Oligofrenopedagogika, Edukacja wczesnoszkolna i przedszkolna, Matematyka, III stopniowy kurs terapii behawioralnej oraz kursy Integracji Odruchów Dynamicznych i Posturalnych dr. Swietłany Masgutowej, Terapii Taktylnej, Ruch Rozwijający Weroniki Sherborn, II stopniowa Terapia EEG Biofeedback, Terapia metody Warnkego, Komunikacja alternatywna Makaton, Terapia Ręki.
 
 </p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">mgr Krzysztof Kleser - terapeuta integracji sensorycznej, absolwent Akademii Wychowania Fizycznego na kierunku wychowanie fizyczne. <br> <br>Ukończone studia podyplomowe na kierunkach: <br>Gimnastyka Korekcyjna, Oligofrenopedagogika, Resocjalizacja i Socjoterapia.<br>
+                    <div class="col-lg-4 me-auto"><p class="lead">• mgr Krzysztof Kleser - terapeuta integracji sensorycznej, absolwent Akademii Wychowania Fizycznego na kierunku wychowanie fizyczne. <br> <br>Ukończone studia podyplomowe na kierunkach: <br>Gimnastyka Korekcyjna, Oligofrenopedagogika, Resocjalizacja i Socjoterapia.<br>
                         Kurs I Stopnia EEG Biofeedback.
  <br> </p></div>
                 </div>
